# synth

./: .clang-format  .gitignore  CMakeLists.txt  TODO.md  clean.sh  cmake_install.cmake  flash.sh  readme.md  requirements.txt  run_build.sh
docs/: microKEY_MIDIimp.txt  synthPinout.csv
scripts/: analyze_map.py  formatter.py  pca9685_registers.py  resistor_ladder.py  wav_file_converter.py  waves.py
scripts/test/: Makefile  test  test.cpp
scripts/test/test.dSYM/Contents/Resources/DWARF/: test
scripts/test/test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
scripts/wavetables/: 11_Kick_06_34_SP.txt  24_Hat_SP_135_14.txt  ClickyHiHat_01_534.txt  Hat_20_454.txt
src/: CMakeCache.txt  CMakeLists.txt  FreeRTOSConfig.h  Makefile  constants.h  errors.hpp  features.h  lv_conf.h  main.c  main.cpp
src/FreeRTOS/: CMakeLists.txt
src/LEDManager/: LEDManager.cpp  LEDManager.hpp
src/audio/: AudioI2SInterface.hpp  AudioManager.cpp  AudioManager.hpp  LFO.hpp  Voice.hpp  adsr.c  adsr.cpp  adsr.h  adsr.hpp  audio.c  audio.cpp  audio.h  audio.hpp  keyboard.c  keyboard.cpp  keyboard.h  keyboard.hpp  mixer.c  mixer.cpp  mixer.h  mixer.hpp  note.c  note.cpp  note.h  note.hpp  note_info.c  note_info.h  osc.hpp  oscillator.c  oscillator.h  oscillator.hpp  sequencer.c  sequencer.cpp  sequencer.h  sequencer.hpp
src/audio/effects/: lpf.c  lpf.h  lpf.hpp
src/audio/samples/: Sample.hpp  hi_hat_0.h  hi_hat_1.h  hi_hat_2.h  kick_0.h
src/devices/: LEDs.c  LEDs.cpp  LEDs.h  LEDs.hpp  PCA9555.c  PCA9555.h  PCA9685.c  PCA9685.h  ST7789.c  ST7789.cpp  ST7789.h  ST7789.hpp  TCA9539.cpp  TCA9539.hpp  button.c  button.h  button.hpp  knob.c  knob.cpp  knob.h  knob.hpp  sgtl5000.c  sgtl5000.cpp  sgtl5000.h  sgtl5000.hpp  ssd1306.cpp  ssd1306.hpp
src/display/: DisplayManager.cpp  DisplayManager.hpp  display.c  display.cpp  display.h  display.hpp
src/display/screens/: homeScreen.c  homeScreen.cpp  sequencerScreen.cpp  settingsSelection.c  settingsSelection.cpp  waveformScreen.c  waveformScreen.cpp
src/display/sub_screens/: volume_bar.cpp  volume_bar.hpp
src/drv/: drv_ADC.cpp  drv_ADC.hpp  drv_GPIO.c  drv_GPIO.h  drv_GPIO_base.hpp  drv_I2C.c  drv_I2C.h  drv_I2C.hpp  drv_I2C_base.hpp  drv_SPI.c  drv_SPI.h  drv_encoder.c  drv_encoder.h
src/hardwareSpecific/F429Discovery/: drv_I2C.hpp  drv_I2C_hardwareSpecific.hpp  hardwareSpecific.c  hardwareSpecific.h  main.cpp
src/hardwareSpecific/F429Discovery/lvgl/env_support/cmake/: custom.cmake
src/hardwareSpecific/F429Discovery/stm32/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
src/hardwareSpecific/F429Discovery/stm32/Core/Src/: dma.c  gpio.c  i2c.c  i2s.c  main.c  sdio.c  spi.c
src/hardwareSpecific/F429Discovery/stm32/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
src/hardwareSpecific/F429Discovery/stm32/Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/cifar10/: arm_nnexamples_cifar10.cpp
src/hardwareSpecific/F429Discovery/stm32/Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/gru/: arm_nnexamples_gru.cpp
src/hardwareSpecific/F429Discovery/stm32/Drivers/CMSIS/NN/NN_Lib_Tests/nn_test/: arm_nnexamples_nn_test.cpp
src/hardwareSpecific/F429Discovery/stm32/USB_DEVICE/App/: usb_device.c  usbd_desc.c
src/hardwareSpecific/G4_RevA/: HardwareSpecific_G4_RevA.cmake  drv_GPIO.hpp  drv_I2C.hpp  hardwareSpecific.c  hardwareSpecific.h  interrupts.cpp  main.cpp
src/hardwareSpecific/G4_RevA/audio/: audio_hardwareSpecific.c  audio_hardwareSpecific.cpp  audio_hardwareSpecific.h  audio_hardwareSpecific.hpp  sequencer_hardwareSpecific.hpp
src/hardwareSpecific/G4_RevA/devices/: LEDs_hardwareSpecific.c  LEDs_hardwareSpecific.h  PCA9555_hardwareSpecific.c  PCA9555_hardwareSpecific.h  PCA9685_hardwareSpecific.c  PCA9685_hardwareSpecific.h  button_hardwareSpecific.c  button_hardwareSpecific.h  knob_hardwareSpecific.c  knob_hardwareSpecific.h
src/hardwareSpecific/G4_RevA/drv/: drv_GPIO_hardwareSpecific.c  drv_GPIO_hardwareSpecific.h  drv_I2C_hardwareSpecific.c  drv_I2C_hardwareSpecific.h  drv_SPI_hardwareSpecific.c  drv_SPI_hardwareSpecific.h  drv_encoder_hardwareSpecific.c  drv_encoder_hardwareSpecific.h
src/hardwareSpecific/G4_RevA/lvgl/: CMakeLists.txt
src/hardwareSpecific/G4_RevA/lvgl/env_support/cmake/: custom.cmake
src/hardwareSpecific/G4_RevA/lvgl/src/extra/themes/: lv_themes.h
src/hardwareSpecific/G4_RevA/stm32/: STM32G491CETx_FLASH.ld  STM32G491METx_FLASH.ld  miniSynth.ioc  synthG4.ioc
src/hardwareSpecific/G4_RevA/stm32/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
src/hardwareSpecific/G4_RevA/stm32/Core/Src/: adc.c  dma.c  gpio.c  i2c.c  i2s.c  main.c  spi.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  tim.c  ucpd.c  wwdg.c
src/hardwareSpecific/G4_RevA/stm32/Drivers/CMSIS/Device/ST/STM32G4xx/Include/: stm32g4xx.h
src/hardwareSpecific/G4_RevA/stm32/Drivers/CMSIS/Include/: mpu_armv7.h
src/hardwareSpecific/G4_RevA/stm32/FATFS/App/: app_fatfs.c
src/hardwareSpecific/G4_RevA/stm32/USB_Device/App/: usb_device.c  usbd_custom_hid_if.c  usbd_custom_hid_if.h  usbd_desc.c  usbd_desc.h
src/lib/SystemView/: SystemView.cmake
src/lib/SystemView/timer/: lib_timer.cpp  lib_timer.hpp
src/misc/: knobControls.c  knobControls.h  misc.c  misc.h
src/stm32/Core/Inc/: FreeRTOSConfig.h  FreeRTOSConfig_doNotUse.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
src/stm32/Core/Src/: adc.c  dma.c  gpio.c  i2c.c  i2s.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c
src/stm32/Drivers/CMSIS/Include/: mpu_armv7.h
src/stm32/Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Inc/: usbd_audio_if_template.h
src/utils/: Utils.h  cpu_utils.c  cpu_utils.h  util_rollingBuffer.hpp
src/wavetables/: saw_wavetable.h  sine_wavetable.h  square_wavetable.h  wavetables.c  wavetables.cpp  wavetables.h  wavetables.hpp
wavetable_generator/: Cargo.toml  saw_wavetable.txt  sine_wavetable.txt  square_wavetable.txt
wavetable_generator/src/: buffer_prototype.rs  main.rs
